fix link on mobile line break

--- a/src/components/MainNav/index.module.scss
+++ b/src/components/MainNav/index.module.scss
@@ -19,6 +19,7 @@
   margin-left: 24px;
   text-decoration: none;
   text-transform: uppercase;
+  white-space: nowrap;
 
   &:hover,
   &:focus {
